--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -30,7 +30,7 @@
         app:strokeWidth="1dp" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/txtQuestionNum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="O aplikaciji"
@@ -43,15 +43,16 @@
         app:layout_constraintVertical_bias="0.066" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/txtQuestion"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="32dp"
         android:text="@string/about_app"
-        android:textSize="24dp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        app:layout_constraintTop_toBottomOf="@+id/txtQuestionNum" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
